# Katas

./: .gitignore
Assets/_OF_Template_Short/: CMakeLists.txt  main.cpp
Basics/ClionTests/: Dog.h  Mammel.cpp
Basics/Lambda/: main.cpp
Basics/Lists_Insert/: main.cpp
Basics/SumOfSquares/: main.cpp
Carpaccio1Short/: main.cpp
ClionTests/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Mammel.h  main.cpp
Factory1/: Addition.cpp  ArithmFactory.cpp  ArithmeticOP.h
FactoryVariadic/: CMakeLists.txt  OpFactory.cpp  OpMultiply.cpp  OpMultiply.h  OperatorBase.h  ShapeBase.h  ShapeFactory.h  ShapeLine.h  ShapeRect.h  ShapeTri.h  ShapeWrong.h  main.cpp
Lambda/: CMakeLists.txt
Lights/: CMakeLists.txt
Lists_Insert/: CMakeLists.txt
OSC_contact/: CMakeLists.txt
PatternDesign/: CMakeLists.txt  PrototypeMain.cpp  Singleton.cpp  SingletonMain.cpp
PatternDesign/Factory1/: Addition.h  Multiplication.cpp
PatternDesign/FactoryVariadic/: OpAdd.cpp  ShapeBase.h
PatternDesign/SingleResponsibility/src/: main.cpp
PatternDesign/cpp/Factory1/: ArithmFactory.h  CMakeLists.txt  Multiplication.h  main.cpp
PatternDesign/cpp/FactoryVariadic/: CMakeLists.txt  OpAdd.h  OpFactory.h  ShapeFactory.h  ShapeTri.h
PatternDesign/cpp/SingletonPrototype/: CMakeLists.txt  SingletonMain.cpp
PatternDesign/cpp/SingletonPrototype/shared/: PrinterPrototype2.h  StringSingleton.h  StringSingleton2.h
PatternDesign/cpp/StatePattern_Fighter/: main_basic.cpp  main_fighter.cpp
PatternDesign/shared/: PrinterPrototype.h  RecordPrototype.h  SingletonBase.cpp  SingletonBase.h  StringSingleton.cpp  StringSingleton.h  StringSingleton2.h  StringSingleton3.h
PatternDesign/swift/DesignPatterns/DesignPatterns/: Strategy.swift  main.swift
PatternDesign/swift/DesignPatterns/DesignPatterns.xcodeproj/: project.pbxproj
PatternDesign/swift/DesignPatterns/DesignPatterns.xcodeproj/project.xcworkspace/xcuserdata/sonneundasche.xcuserdatad/: UserInterfaceState.xcuserstate
PatternDesign/swift/DesignPatterns/DesignPatterns.xcodeproj/xcuserdata/sonneundasche.xcuserdatad/xcschemes/: DesignPatterns.xcscheme
PatternDesign/swift/Single_Resposibility_Principle/: CMakeLists.txt
PatternDesign/swift/Single_Resposibility_Principle/Sources/: Journal1.swift
PatternDesign/swift/StateMachineKata/StateMachineKata.xcodeproj/xcuserdata/sonneundasche.xcuserdatad/xcschemes/: xcschememanagement.plist
PatternDesign/swift/StatePattern/StatePattern.xcodeproj/xcuserdata/sonneundasche.xcuserdatad/xcschemes/: xcschememanagement.plist
SingleResponsibility/: CMakeLists.txt
SoftwareCraftmen/TicTacToe/: CMakeLists.txt  Tests.cpp  main.cpp
StatePattern_Fighter/: Behavioral.State.classic.cpp  CMakeLists.txt
SumOfSquares/: CMakeLists.txt
Template/: CMakeLists.txt
TypeTraining/: type training.swift
_OF_Template/: CMakeLists.txt
gMockMeetup/: CMakeLists.txt  Drawer.cpp  Drawer.h  Number.cpp  main.cpp
xcode/: .gitignore
(+70 files in other folders)
